backends/drm: reduce safety margin to 1ms

As we track how long the atomic commit processing + ioctl(s) take, it should be
relatively safe to do. In order to reduce it further, we still need new kernel
API with accurate information about the real deadline for each frame though.

BUG: 513296